Full swagger application work
