# middleware/IsAdmin.js
@@ -1,8 +1,9 @@
 module.exports = function (req, res, next) {
-    if(!req.user.IsAdmin){
-    return res.status(403).send(" You are not admin ....");
+    if(req.user.IsAdmin === true){
+      next();
     }
-    next();
+  return res.status(403).send(" You are not admin ....");
   };
   
+
 
